2005-07-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/datawidget.cc:
	* glom/utility_widgets/imageglom.cc:
	* glom/utility_widgets/imageglom.h: Use a derived Image widget 
	so we can catch button_press_events on it.

2005-07-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/data_structure/field.cc:
	* glom/data_structure/field.h:
	- Added map of possible field conversions, and 
	get_conversion_possible().
	- Added TYPE_IMAGE, which maps to "bytea" in SQL and 
	Gnome::Gda::Value::TYPE_BINARY. 
	* glom/mode_design/fields/box_db_table_definition.cc: 
	Don't cast the data if it is not possible.
	* glom/utility_widgets/datawidget.cc: Constructor: Create a 
	Gtk::Image widget for image fields.

2005-07-11  Daniel Holbach <dh@mailempfang.de>

	* glom/main.cc: Pass G_PARAM_NONE to gnome_program_init() to 
	avoid a crash at startup.

0.8.33:

2005-07-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/dialog_layout_details.cc: on_cell_data_name(): 
	Allow group names to be changed.

2005-07-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc:
	* glom/base_db.h: get_table_names(): Added optional bool 
	ignore_system_tables parameter
	* glom/mode_design/box_db_table_relationships.cc: 
	fill_from_database(): Hide the system tables.

2005-07-09  Murray Cumming  <set EMAIL_ADDRESS environment variable>

	* configure.in: Depend on gnome-vfsmm 2.11, instead of just 
	the version that bakery needs, because we need 
	Uri::make_from_shell_arg().
	* glom/navigation/box_tables.cc: load_from_document(): Really 
	hide the glom_system_* tables.

2005-07-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/document/document_glom.cc:
	* glom/document/document_glom.h: Added get_first_table().
	* glom/frame_glom.cc: on_dialog_tables_hide(): If the current 
	table was deleted, show the default or first table.

0.8.32:

2005-07-08  Murray Cumming  <murrayc@murrayc.com>
